Fixed the bug where the uncollapsed navbar presented a 'jumping' behaviour. Moved a class on all html pages and removed redundant styles in css page. More information about this bug fix has been added to the testing.md.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,7 +114,6 @@ div a h1:hover {
     
     .navbar-dark {
         float: right;
-        padding: 0;
         margin: 3px 40px;
     }
 }
